<resources>
    <string name="app_name">app1</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total em quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litre">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KMs por litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>

    <string name="fill_all_fields">Preencha todos os campos!</string>


</resources>