<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/distance"
        android:textSize="16sp"
        android:textColorHint="@color/gray_100"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_km"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:textColor="@color/gray_100"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:textSize="16sp"
        android:textColorHint="@color/gray_100"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_litre"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textColor="@color/gray_100"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomy"
        android:textSize="16sp"
        android:textColorHint="@color/gray_100"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/km_per_liter"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textColor="@color/gray_100"
        android:layout_marginBottom="80dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_spend"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/gray_200"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_value"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="18dp"
        android:paddingVertical="16dp"
        android:layout_gravity="center" />



</LinearLayout>